tests/fixtures/errors/struct_field_dim_mismatch.gcl
// error: field dimension mismatch in struct construction
dimension Velocity = Length / Time;

type Pair {
    a: Length,
    b: Velocity,
}

node bad: Pair = Pair { a: 1.0 kg, b: 100.0 m/s };
